--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,flask,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,flask,venv
 
+
+uploads/
+
 ### Flask ###
 instance/*
 !instance/.gitignore
