--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,11 @@
 services:
-  - type: web
-    name: api-skin-cancer
-    env: docker
-    dockerfilePath: Dockerfile
-    branch: main
-    plan: starter
-    envVars:
-      - key: FLASK_APP
-        value: app.py
-      - key: FLASK_RUN_HOST
-        value: 0.0.0.0
-    ports:
-      - 5000
+- type: web
+  name: api-skin-cancer
+  runtime: python
+  repo: https://github.com/Safemood/api-skin-cancer
+  plan: free
+  region: oregon
+  buildCommand: pip install -r requirements.txt
+  startCommand: python app.py
+  autoDeployTrigger: commit
+version: "1"
